# 22590669_HuynhDangKhoa_KLTN

./: .gitignore  PROJECT_SUMMARY.md  bug.txt  dev.ps1  dev.sh  import_data.py  joyful-launching-gray.md
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  admin_agent.yaml  agent.yaml  docker-compose.yml  fix_all.py  main.py  modal_app.py  modal_deploy.sh  pyproject.toml  run.ps1  run.sh  run_migration.py
Backend/.claude/: settings.json
Backend/.github/workflows/: deploy.yml
Backend/docs/blueprint/: 00-SUMMARY.md  01-architecture-overview.md  02-supervisor-graph.md  03-customer-query-agent.md  04-recommendation-agent.md  05-itinerary-agent.md  06-flight-agent.md  07-hotel-agent.md  08-transport-agent.md  09-booking-payment-flow.md  10-news-search-agent.md  11-admin-graph.md  12-concierge-event-jobs.md  13-intent-routing.md  14-mcp-tools.md  15-state-management.md  16-database.md  17-api-endpoints.md  18-frontend.md  19-observability.md  20-guardrails.md  21-roadmap.md
Backend/migrations/: embedding.py  fix_vn_diacritics.py
Backend/scripts/: activity_seed_extra.py  backup_db.py  restore_to_neon.py  seed_activity_packages.py  seed_more_tours.py  seed_place_images.py  seed_provincial_hotels.py  seed_transport_data.py  update_real_images.py
Backend/tests/: conftest.py  test_admin_recommendations_api.py  test_admin_settings_service.py  test_admin_user_service.py  test_booking.py  test_booking_management.py  test_config.py  test_llm_providers.py  test_mem0_integration.py  test_payment.py  test_promotion.py  test_recommend_tour.py  test_report.py  test_reports.py  test_search_tour.py  test_sendgrid_otp.py  test_tour_package.py  test_tour_package_images.py
Backend/tests/test_auth/: test_sign_in_up.py
(+437 files in other folders)
