[project]
name = "ai-assistant-backend"
version = "1.0.0"
description = "AI Assistant Backend with LangGraph"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.10.1",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.28",
    "sqlalchemy>=2.0.31",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "supabase>=2.4.0",
    "redis>=5.0.1",
    "aioredis>=2.0.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "httpx>=0.25.0",
    "pyyaml==6.0.1",
    "python-json-logger==2.0.7",
    "FalkorDB==1.2.0",
    "graphiti-core==0.22.0",
    "colorama>=0.4.6",
    "pydantic[email]",
    "bcrypt",
    "uvicorn",
    "pyjwt>=2.8.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "httpx",
    "requests>=2.32.5",
    "requests",
    "cryptography>=41.0.0",
    "fastmcp>=0.2.0",
    "mem0ai>=1.0.0",
    "numpy>=1.24.0",
    "mcp-ui-server",
    "cloudinary>=1.36.0",
    "sendgrid>=6.10.0",
    "perplexityai>=0.1.0",
    "APScheduler>=3.10.0",
    "pytz>=2024.1",
    "modal",
    "psycopg2-binary>=2.9.12",
    "tavily-python>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["app"]
